# plan

./: ADR.md  CMakeLists.txt  Dockerfile  README.md  RESEARCH.md
.github/workflows/: ci.yaml
examples/: basic_simulation.ipynb
python/: setup.py
python/dist_training_sim/: __init__.py  simulator.py  visualization.py
python/tests/: test_simulator.py
src/: communication_model.cpp  communication_model.hpp  compute_model.cpp  compute_model.hpp  memory_model.cpp  memory_model.hpp  training_simulator.cpp  training_simulator.hpp
src/bindings/: CMakeLists.txt  bindings.cpp
tests/: CMakeLists.txt  training_simulator_test.cpp
